changed structure for seo

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Borsch: facts that you didn't know</title>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Some people are still thinking, that Borsch is a russian cuisine, but it's not true. Let's break the steriotypes and learn new facts about this tasty dish"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Borsch</title>
     <link rel="stylesheet" type="text/css" href="/src/style.css" />
   </head>
   <body>
